# Diaflow

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  imgui.ini
.cache/clangd/index/: ImFileDialog.cpp.AFD10F63FAC2E8C0.idx  ImFileDialog.h.87066D88A3F1664F.idx  ImGuiFileBrowser.cpp.D7B40E95E5CF3681.idx  ImGuiFileBrowser.h.5F922BF50D2AE76F.idx  glad.c.7CAAACBE4E6C83F0.idx  glad.h.C54539C95DE17897.idx  imconfig.h.9966477557E0A6AE.idx  imgui.cpp.5BF3AB5E8AAD9CF2.idx  imgui.h.1FC07EDC81E518E9.idx  imgui_draw.cpp.A340549254E0996B.idx  imgui_impl_opengl3.cpp.A754E6604DEE61D3.idx  imgui_impl_opengl3.h.A84FE0C1BC48BA32.idx  imgui_impl_sdl.cpp.B15A5A56093318CB.idx  imgui_impl_sdl.h.AA04897364474380.idx  imgui_internal.h.6DA960041CBDC2B4.idx  imgui_tables.cpp.1D6C556514C84271.idx  imgui_widgets.cpp.4CDE1B097853C4F4.idx  implot.cpp.EF60F41E081EB36E.idx  implot.h.F65F95987A65EC89.idx  implot_internal.h.87C23D5AD2DBE876.idx  implot_items.cpp.9E1E837011972A02.idx  imstb_rectpack.h.42818D35317E6364.idx  imstb_textedit.h.CA16FA1F084D26BB.idx  imstb_truetype.h.EBE8200E77B17BA5.idx  khrplatform.h.2930084FB045C3BD.idx  main.cpp.4AC2D76BD473AE24.idx
include/: flow.h
include/glad/: glad.h
screenshots/: carbon_guidelines.txt
src/: glad.c  main.cpp
